# A-SoftwareRenderer

./: CMakeLists.txt  img.ppm  img.tga  main.cpp
src/: Renderer.cpp  Renderer.h
src/math/: Math.h  Matrix44.h  Vector3.h  Vector4.h  vector2.h
